[package]
name = "wasm-profiler"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/wasm-profiler"
description = "Wasm profiler toolkit"
edition = "2018"

[dependencies]
clap = "2.33"
csv = "1.1"
parity-wasm = "^0.40"
serde = { version = "1.0", features = ["derive"] } 

[lib]
name = "wasmprofiler"

[[bin]]
name = "wasm-profiler"
path = "src/bin/main.rs"
